--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,66 +1,52 @@
-<div class="container container-fixed">	
-	<div class="row">
-		<div class="col col-12">
-			<div class="panel">				
-				<div class="row">
-					<div class="col col-12">
-						<h1>Scales</h1>						
-					</div>
-					<div class="col col-5">
-						<a href="scales/">
-							<img src="assets/img/scales1.png" class="border"/>
-						</a>
-					</div>
-					<div class="col col-7">
-						<p>
-							Learn scales for Guitar, Bass and Piano with the interactive scale diagram app. 
-						</p>
-						<p>
-							Scale diagrams are available for many of the most popular scale patterns, and some more uncommon ones.
-						</p>
-					</div>
-				</div>			
 
-				<div class="row">
-					<div class="col col-7">
-						<p>
-							Select your instrument and tuning in the Instrument settings panel.
-						</p>
-						<p>							
-							Choose from different instruments including 6 String, 7 String and 8 String Guitar, as well as 4 String, 5 String and 6 String Bass Guitar.
-						</p>
-					</div>
-					<div class="col col-5">
-						<a href="scales/">
-							<img src="assets/img/scales2.png" class="border"/>
-						</a>
-					</div>
-				</div>			
-			</div>
+<div class="content">
+
+	<div class="container grey-light">	
+		<div class="section">
+			<h1>Music makes you feel</h1>		
+			<p>
+				Music makes you feel the way it does for a reason. Learn how to play. Master your scales using our interactive scale app. 
+
+				Choose between Guitar, Bass Guitar or Piano, with the most popular scale patterns.
+			</p>
+
+			<a href="/scales/">
+				<img src="assets/img/guitar-scales-lg.jpg"/>
+			</a>
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col col-12">
-			<div class="panel">				
-				<div class="row">
-					<div class="col col-12">
-						<h1>Circle of Fifths</h1>						
-					</div>
-					<div class="col col-5">
-						<a href="circle-of-fifths/">
-							<img src="assets/img/circle1.png" class="border"/>
-						</a>
-					</div>
-					<div class="col col-7">
-						<p>
-							View the tones and chords in any given key of the 7 modern Modes. Great way to figure out the key of a song, or to write new chord progressions.
-						</p>
-					</div>
-				</div>			
+	<div class="container blue">	
+		<div class="section">
+			<h1>Choose your instrument</h1>		
+			<p>
+				Pick your favourite. Right or left handed. <br/>
+				Lots of strings? Different tunings? No problem.
+			</p>
+			<a href="/scales/">
+				<img src="assets/img/instruments-lg.jpg"/>
+			</a>
+		</div>
+	</div>
 
-					
-			</div>
+	<div class="container dark-grey">
+		<div class="section">
+			<h1>Get to know your musical keys and chord progressions</h1>
+			<p>
+				No matter what type of instrument you play, the Circle of Fifths is an important tool for figuring out chord progressions and musical keys. Figure out which chords go well with different keys, and switch between each of the 7 modern modes.
+			</p>
+			<a href="/circle-of-fifths/">
+				<img src="assets/img/cof-lg.jpg"/>
+			</a>
+		</div>
+	</div>
+
+	<div class="container blue">	
+		<div class="section">
+			<h1></h1>
+			<p>
+				
+			</p>
 		</div>
 	</div>
 </div>
