--- a/src/assets/less/circle-of-fifths.less
+++ b/src/assets/less/circle-of-fifths.less
@@ -44,38 +44,6 @@
 	padding-top: 0;
 }
 
-.circle-of-fifths fieldset.scale-chords div.container {
-	display: inline-block;
-	background: darken(@grey-light, 8%);
-	border: 1px solid @grey-md;
+.circle-of-fifths fieldset.scale-chords div.info-box {
 	margin-left: 16px;
-}
-
-.circle-of-fifths fieldset.scale-chords span.title {
-	margin-right: 8px;
-	font-size: 1.4em;
-}
-
-.circle-of-fifths fieldset.scale-chords div.chords {
-	display: inline-block; 
-	border: 1px solid @grey-md;
-	font-size: 1.4em;
-	font-weight: @weight-light;
-}
-
-div.chords.major {
-	background: lighten(@blue-bright, 10%);
-}
-
-div.chords.minor {
-	background: @lime;
-}
-
-div.chords.diminished {
-	background: @gold;
-}
-
-.circle-of-fifths fieldset.scale-chords div.chords span {
-	padding: 12px;
-	line-height: 2em;
 }
