--- a/src/assets/less/scales.less
+++ b/src/assets/less/scales.less
@@ -25,6 +25,9 @@ div.scale-info .notes {
 	font-weight: @weight-normal;
 }
 
+div.scale-details {
+    margin-top: 12px;
+}
 
 /* Not sure? */
 svg:not(:root) { 
