--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -1,3 +1,4 @@
+
 @weight-light:     300;
 @weight-normal:    400;
 
@@ -8,6 +9,7 @@
 @grey-light:    #eee;
 
 @lime:          #bf5;
+@blue:			#2777AD;
 @blue-light: 	#33c9ff;
 @blue-bright:   #0bf;
 @gold:			#FFCE38;
