--- a/src/assets/css/page-layout.css
+++ b/src/assets/css/page-layout.css
@@ -11,17 +11,20 @@ body {
 }
 h1 {
   font-weight: 300;
-  border-bottom: 1px solid #333;
-  color: #333;
+  font-size: 2.5em;
   margin-top: 12px;
   margin-left: 6px;
   line-height: 1em;
 }
 h3 {
   font-weight: 500;
-  text-decoration: underline;
-  color: #333;
   line-height: 0em;
+}
+h1.line {
+  border-bottom: 1px solid #333;
+}
+h3.line {
+  text-decoration: underline;
 }
 p {
   line-height: 1.7em;
@@ -177,24 +180,6 @@ div.error p {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
 }
-/** Tablets **/
-@media (min-width: 768px) {
-  /*div.container-fixed {
-		width: 750px;
-	}*/
-}
-/** Small Desktop screens **/
-@media (min-width: 992px) {
-  div.container-fixed {
-    width: 970px;
-  }
-}
-/** Large Desktop screens **/
-@media (min-width: 1200px) {
-  div.container-fixed {
-    width: 1170px;
-  }
-}
 div.panel {
   border-radius: 8px;
   padding: 12px;
@@ -218,6 +203,35 @@ h1.page-title {
   margin-top: 6px;
   margin-right: 12px;
   float: right;
+}
+div.info-box {
+  padding: 12px;
+  display: inline-block;
+  background: #dadada;
+  border: 1px solid #777;
+  font-size: 1.4em;
+}
+div.info-box span.title {
+  margin-right: 8px;
+}
+div.info-box div.info {
+  display: inline-block;
+  border: 1px solid #777;
+  font-weight: 300;
+}
+div.info-box div.info span {
+  padding: 12px;
+  line-height: 2em;
+}
+div.info-box.info-box-sm {
+  font-size: 1.1em;
+  background: #e1e1e1;
+}
+div.info-box.info-box-sm div.info {
+  padding: 0 4px;
+}
+div.info-box.info-box-sm div.info span {
+  padding: 0 8px;
 }
 .panel:before,
 .panel:after {
@@ -286,6 +300,53 @@ h1.page-title {
   width: 100%;
 }
 /***************/
+/** Full Page Content **/
+.container.grey-light {
+  background: #eee;
+}
+.container.blue {
+  color: #eee;
+}
+.container.dark-grey {
+  background: #333;
+  color: #eee;
+}
+.section {
+  width: 100%;
+  margin: 64px auto;
+  text-align: center;
+}
+.section img {
+  width: 100%;
+}
+/***********************/
+/** Tablets **/
+@media (min-width: 768px) {
+  div.section {
+    width: 738px;
+  }
+  /*div.container-fixed {
+		width: 750px;
+	}*/
+}
+/** Small Desktop screens **/
+@media (min-width: 992px) {
+  div.section {
+    width: 962px;
+  }
+  div.container-fixed {
+    width: 970px;
+  }
+}
+/** Large Desktop screens **/
+@media (min-width: 1200px) {
+  div.section {
+    width: 1170px;
+  }
+  div.container-fixed {
+    width: 1170px;
+  }
+}
 /** Cookies Confirmation **/
 div.cookies {
   position: relative;
