--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -5,8 +5,8 @@
 		<div class="section">
 			<h1>Music makes you feel</h1>		
 			<p>
-				Music makes you feel the way it does for a reason. Learn how to play. Master your scales using our interactive scale app. 
-
+				Music makes you feel. Learn to play. Master your scales using our interactive scale app. 
+				<br/>
 				Choose between Guitar, Bass Guitar or Piano, with the most popular scale patterns.
 			</p>
 
@@ -20,8 +20,9 @@
 		<div class="section">
 			<h1>Choose your instrument</h1>		
 			<p>
-				Pick your favourite. Right or left handed. <br/>
-				Lots of strings? Different tunings? No problem.
+				Lots of strings. Different tunings.
+				<br/>
+				Pick your favourite. Right or left handed.
 			</p>
 			<a href="/scales/">
 				<img src="assets/img/instruments-lg.jpg"/>
@@ -31,7 +32,7 @@
 
 	<div class="container dark-grey">
 		<div class="section">
-			<h1>Get to know your musical keys and chord progressions</h1>
+			<h1>Learn musical keys and chord progressions</h1>
 			<p>
 				No matter what type of instrument you play, the Circle of Fifths is an important tool for figuring out chord progressions and musical keys. Figure out which chords go well with different keys, and switch between each of the 7 modern modes.
 			</p>
