--- a/src/assets/less/modal.less
+++ b/src/assets/less/modal.less
@@ -29,7 +29,7 @@
     width: 400px;
     max-width: 90%;
     margin: 10% auto;
-    background: #eee;
+    background: @grey-light;
     padding: 20px;        
 }
 
@@ -37,7 +37,7 @@
     position: relative;
     margin: 2% auto;
     width: 1000px;
-    background: #eee;
+    background: @grey-light;
     padding: 20px;       
     overflow-y: auto;
     
