--- a/src/assets/less/page-layout.less
+++ b/src/assets/less/page-layout.less
@@ -84,7 +84,7 @@ fieldset > legend {
 
 div.nav {    	
 	border-bottom: 1px solid #ccc;
-	color: #eee; 
+	color: @grey-light; 
 
 	/** Removed 
 		position: relative;
@@ -109,7 +109,7 @@ div.nav a.brand {
 	font-size: 24px;
 	font-weight: 300;
 	padding: 10px 25px;
-	color: #eee;
+	color: @grey-light;
 	text-decoration: none;
 }
 
@@ -129,7 +129,7 @@ ul.navbar li, ul.navbar div.inline {
 } 
 
 ul.navbar li a {
-	color: #eee;
+	color: @grey-light;
 	padding: 16px;
 	text-decoration: none;
 }
@@ -141,7 +141,7 @@ ul.navbar li a:hover, ul.navbar li a.active {
 ul.navbar-right {
 	float: right !important;
 	margin-right: 55px;
-}
+} 
 
 .hover-pointer {
     cursor: pointer;   
@@ -149,7 +149,7 @@ ul.navbar-right {
 
 div.footer {
 	background: #333;
-	border-top: 6px solid #eee;
+	border-top: 6px solid @grey-light;
 	min-height: 200px;
 }
 
@@ -165,7 +165,7 @@ div.footer {
 
 /** Content **/
 div.content {
-	background:  @blue; 
+	background:  @color-content-bg; 
 	min-height: 65%;
 	overflow-x: auto;	
 }
@@ -205,7 +205,7 @@ div.panel {
 	padding: 12px;
 	margin-bottom: 12px;
 	border: 1px solid #444;
-	background: #eee;
+	background: @grey-light;
 }
 
 div.panel div.header {
