--- a/src/assets/less/scales.less
+++ b/src/assets/less/scales.less
@@ -43,7 +43,7 @@ svg:not(:root) {
 }
 
 .instrument-picture {
-    background: #eee;
+    background: @grey-light;
     margin-top: 6px;
     padding: 12px;
     padding-bottom: 2px;
