--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -94,7 +94,7 @@ svg.chords {
 
 
 div.settings-panel div.content .row {
-    background: #444;
+    background: @grey-light;
     margin: 6px 0;
     padding: 6px 12px;
     
