--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -6,7 +6,7 @@
 @grey-md-dark:  #555;
 @grey-md:       #777; 
 @grey-md-light: #ccc;
-@grey-light:    #eee;
+@grey-light:    #fff;
 
 @lime:          #bf5;
 @blue:			#2777AD;
@@ -36,3 +36,7 @@
 /** Borders **/
 @corner-radius: 	4px;
 @corner-radius-lg:  8px;
+
+
+
+@color-content-bg: @grey-light;
