--- a/src/assets/css/scales.css
+++ b/src/assets/css/scales.css
@@ -45,7 +45,7 @@ svg:not(:root) {
   transform: scale(-1, 1);
 }
 .instrument-picture {
-  background: #eee;
+  background: #fff;
   margin-top: 6px;
   padding: 12px;
   padding-bottom: 2px;
@@ -66,7 +66,7 @@ svg:not(:root) {
   text-decoration: none;
   font-size: 1.4em;
   color: #333;
-  border: 1px solid #eee;
+  border: 1px solid #fff;
 }
 .zoom-pan-control i:active {
   color: #777;
