--- a/src/assets/less/metronome.less
+++ b/src/assets/less/metronome.less
@@ -172,7 +172,7 @@ a.play-pause.play i {
 button.tap-tempo {
 	padding-left: 8px;
 	padding-right: 8px;
-	background: #eee;
+	background: @grey-light;
   	transition: background-color 500ms cubic-bezier(0,.09,0,1);
 }
 
