--- a/src/assets/less/scales.less
+++ b/src/assets/less/scales.less
@@ -11,18 +11,19 @@ svg.scales {
 }
 
 div.scale-info {
+    color: @header-text;
 	margin-left: 12px;
 	margin-bottom: 12px;
 }
 
 div.scale-info .scale {
-    font-size: 2em;
+    font-size: 1.6em;
 	font-weight: @weight-light;
 }
 
 div.scale-info .notes {
-    font-size: 1.5em;
-	font-weight: @weight-normal;
+    font-size: 1.2em;
+	font-weight: @weight-light;
 }
 
 div.scale-details {
@@ -43,14 +44,14 @@ svg:not(:root) {
 }
 
 .instrument-picture {
-    background: @grey-light;
+    display: inline-block;
     margin-top: 6px;
     padding: 12px;
     padding-bottom: 2px;
 }
 
 .instrument-picture img {    
-    width: 100%;    
+    width: 120px;    
 }
 /** ! Instruments **/
 
