--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -17,7 +17,8 @@
 @navy-dark:     #445966;
 
 @body-bg:       @navy-dark;
-@container-bg:  @grey-light;
+@container-bg:  transparent;
+@color-content-bg: transparent;
 
 @header-bg:     @grey-dark;//@grey-dark;
 @header-text:   @grey-light;
@@ -37,6 +38,3 @@
 @corner-radius: 	4px;
 @corner-radius-lg:  8px;
 
-
-
-@color-content-bg: @grey-light;
