--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1,5 +1,13 @@
 @import "vars.less";
 
+html {
+    background: url(/app/assets/img/drumkit-lg.jpg) #222 no-repeat center center fixed !important;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; 
+}
+
 .box-shadow() {
     -webkit-box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.75);
@@ -32,7 +40,7 @@ svg.chords {
     background-color: @container-bg;
 }
 
-
+ 
 
 .learn-more {
     float: right;
